# RPaint

./: .gitmodules  CMakeLists.txt  README.md  README.txt  RPaint.diff.txt  precomp.h  reactos2rp.sh  rp2reactos.sh
reactos/: buildno.h
